crates/bsql/tests/compile_fail/drop_rejected.rs
fn main() {
    let _ = bsql::query!("DROP TABLE users");
}
